# Topsis-Aditvir-102317150

./: README.md  SETUP.PY  gitignore.txt  license.txt  setup.cfg  setup.py
Testing/: emptys  run_topsis.py  test_topsis.py
