[metadata]
name = TOPSIS-ADITVIR-102317150
version = 0.1
author = Aditvir Rinwa
author_email = aditvir@example.com
description = A Python implementation of TOPSIS (Technique for Order Preference by Similarity to Ideal Solution) for multi-criteria decision analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Aditvir/Topsis-Aditvir-102317150
project_urls =
    Bug Tracker = https://github.com/Aditvir/Topsis-Aditvir-102317150/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4
install_requires =
    pandas
    numpy

[options.packages.find]
where = .
include = TOPSIS-ADITVIR-102317150*
